Getting_starting_with_Python_Basics

--- a/04-Python for Data Science, AI & Development/Labs/PY0101EN-1-1-Getting_Started_With_Python.ipynb
+++ b/04-Python for Data Science, AI & Development/Labs/PY0101EN-1-1-Getting_Started_With_Python.ipynb
@@ -336,7 +336,8 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Write your code below. Don't forget to press Shift+Enter to execute the cell\n"
+        "# Write your code below. Don't forget to press Shift+Enter to execute the cell\n",
+        "print ( \"Hello, Python!\" )"
       ]
     },
     {
@@ -362,11 +363,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Hello, World!\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write your code below. Don't forget to press Shift+Enter to execute the cell\n"
+        "# Write your code below. Don't forget to press Shift+Enter to execute the cell\n",
+        "print (\"Hello, World!\") # Print the traditional hello world message"
       ]
     },
     {
@@ -392,11 +402,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "17\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write your code below. Don't forget to press Shift+Enter to execute the cell\n"
+        "# Write your code below. Don't forget to press Shift+Enter to execute the cell\n",
+        "z= 2+15\n",
+        "print (z)"
       ]
     },
     {
